# celery-slack

./: .env  README.rst  pyproject.toml
.github/workflows/: ci.yml
celery_slack/: slack.py  slackify.py
docs/: conf.py
tests/celeryapp/: __init__.py  schedule.py
tests/unit/: conftest.py  test_slack.py  test_slackify.py
