[tool.ruff]
line-length = 120

[tool.poetry]
name = "celery_slack"
version = "0.4.2"
description = "A Slack extension for Celery."
authors = [
  "Christopher Flynn <crf204@gmail.com>",
  "Hikmat Samadov <s3m3dov@hotmail.com>",
  "Krystof Beuermann <krystof@blackbox.ms>",
]
readme = "README.rst"
license = "MIT"
repository = "https://github.com/blackbox-innovation/celery-slack"
homepage = "https://github.com/blackbox-innovation/celery-slack"
packages = [{ include = "celery_slack" }]
include = ["HISTORY.rst"]
keywords = ["celery", "slack"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
]

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.4.0"
requests = "^2.32.3"
ephem = "^4.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
twine = "^5.1.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
vcrpy = "^6.0.1"
responses = "^0.25.3"
redis = "^5.0.6"
ruff = "^0.4.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
